--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<link rel="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="./css/style.css" />
 
 		<title>SingUp-Form</title>
 	</head>
@@ -58,6 +58,6 @@
 			</div>
 		</div>
 
-		<script src="./index.js"></script>
+		<script src="./js/index.js"></script>
 	</body>
 </html>
